--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".CharacterAnpassung"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".CharDetails"
+            android:label="@string/title_activity_char_details" >
+        </activity>
     </application>
 
 </manifest>
