--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".StartScreen"
-            android:label="@string/title_activity_start_screen" >
+            android:name="de.henze.StartScreen"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,17 +23,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CharErstellung"
+            android:name="de.henze.CharErstellung"
             android:label="@string/title_activity_char_erstellung" >
         </activity>
         <activity
-            android:name=".CharacterAnpassung"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name=".CharDetails"
-            android:label="@string/title_activity_char_details" >
+            android:name="de.henze.CharacterAnpassung"
+            android:label="@string/title_activity_char_anpassung" >
         </activity>
     </application>
-
 </manifest>
